# model_selction_wrapper_function

./: LICENSE  Model Scores.twb  Python API for regression model building and evaluation.ipynb  README.md  README.rst  presentation.ipynb  presentation.slides.html  pyproject.toml
data/: auto_mpg_processed.csv
tests/: Model_simple_validation_scores.csv  test_dec_16_19.py
